tests/baselines/reference/importInsideModule.errors.txt
importInsideModule_file2.ts(2,26): error TS1147: Import declarations in a namespace cannot reference a module.
importInsideModule_file2.ts(2,26): error TS2307: Cannot find module 'importInsideModule_file1' or its corresponding type declarations.


==== importInsideModule_file2.ts (2 errors) ====
    export module myModule {
        import foo = require("importInsideModule_file1");
                             ~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1147: Import declarations in a namespace cannot reference a module.
                             ~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module 'importInsideModule_file1' or its corresponding type declarations.
        var a = foo.x;
    }
==== importInsideModule_file1.ts (0 errors) ====
    export var x = 1;
    